fix for overflow in main name on home page

--- a/site/css/myStyles.css
+++ b/site/css/myStyles.css
@@ -141,7 +141,7 @@ div#text-photo {
 }
 
 div#name {
-	overflow: auto;
+	/*overflow: auto;*/
 	width: 100%;
 	max-width: 320px;
 	margin: 0 auto;
